@@ -1,4 +1,5 @@
 [WIP]
+* cmd_play_game should output scores instead of ranks!
 * fix: psyleague show --active
 [0.1.1]
 * bugfixes: psyleague config, psyleague bot update -d, installation, linux support
